--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -16,6 +16,9 @@
             
         <ul>
             <li><a href="../../index.html">Home</a> </li>
+            <li><a href="./pages/bookinground/bookground.html">Book Grounds</a></li>
+            <li><a href="./pages/player/findplayers.html">Find Players</a></li>
+            <li><a href="../..//pages/login/login.html"> <button class="login">Login</button></a></li>
 
             
         </ul>
@@ -43,35 +46,35 @@
                 <div class="faqquestionitem">
                 <div class="faq-ques1" id="ques1">
                     <a href="#ques1" class="question">
-                        <span>What is book and play</span>
+                        <span>What is book and play?</span>
                         <i class="plusicon"></i>
                     </a>
                     <p class="ans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
                 </div>
                 <div class="faq-ques1" id="ques2">
                     <a href="#ques2" class="question">
-                        <span>What is book and play</span>
+                        <span>Is ground is good enough to play?</span>
                         <i class="plusicon"></i>
                     </a>
                     <p class="ans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
                 </div>
                 <div class="faq-ques1" id="ques3">
                     <a href="#ques3" class="question">
-                        <span>What is book and play</span>
+                        <span>How can join as a member?</span>
                         <i class="plusicon"></i>
                     </a>
                     <p class="ans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
                 </div>
                 <div class="faq-ques1" id="ques4">
                     <a href="#ques4" class="question">
-                        <span>What is book and play</span>
+                        <span>Is web chat is safe?</span>
                         <i class="plusicon"></i>
                     </a>
                     <p class="ans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
                 </div>
                 <div class="faq-ques1" id="ques5">
                     <a href="#ques5" class="question">
-                        <span>What is book and play</span>
+                        <span>Is star provide anything to my profile?</span>
                         <i class="plusicon"></i>
                     </a>
                     <p class="ans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
@@ -104,5 +107,48 @@
     </div>
     <img class="rightarrow" src="../../assets/images/rightarrow.gif" alt="rightarrow">
 </div>
+<!-- footer -->
+<footer>
+    <div id="footer1">
+        <div class="row">
+            <div class="column1">
+                <p class="foot-heading">Company</p><br>
+
+                <p><a href="#">About us</a> </p>
+                <p><a href="#">Privacy Policy</a></p>
+                <p><a href="#">Our Service</a></p>
+                <p><a href="#">Our Clients</a></p>
+
+
+
+            </div>
+            <div class="column1">
+                <p class="foot-heading">Get Help</p><br>
+
+                <p><a href="#">FAQ</a> </p>
+                <p><a href="#">Contact</a></p>
+
+
+
+            </div>
+            <div class="column1">
+                <p class="foot-heading">Connect us on</p><br>
+
+                <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
+                <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
+                <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
+                <a href="#" aria-label="linkedin "> <i class="fa-brands fa-linkedin"></i> </a>
+
+
+
+
+            </div>
+        </div>
+
+
+
+    </div>
+</footer>
+     <!-- footer -->
 </body>
 </html>
