--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -51,7 +51,7 @@
 <div class="cont3">
     <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
-    <a href="login.html"> <button class="login2">Your Profile</button></a></li>
+    <a href="../../pages/player/registeredplayer.html"> <button class="userprofile">Your Profile</button></a></li>
 </div>
     </div>
     <!-- main1 -->
@@ -76,7 +76,7 @@
                     <br>
                     <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
                 <p class="nameplayer">Ramya</p>
-                <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+                <a href="../../pages/player/player2.html"> <button class="visit">Visit</button></a></li>
                 <div class="ratings">
                     <i class="fa-solid fa-star"></i>
                     <span class="ratingno" >4.5</span>
@@ -88,9 +88,9 @@
             <div class="child1">
                 <div class="group">
                     <br>
-                                    <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
+                                    <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
                                 <p class="nameplayer">Andrea</p>
-                                <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+                                <a href="../../pages/player/player3.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
                                     <span class="ratingno" >4.5</span>
@@ -101,9 +101,9 @@
             <div class="child1">
                 <div class="group">
                     <br>
-                                    <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
+                                    <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
                                 <p class="nameplayer">Suresh</p>
-                                <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+                                <a href="../../pages/player/player4.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
                                     <span class="ratingno" >4.5</span>
@@ -117,7 +117,7 @@
                     <br>
                                     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
                                 <p class="nameplayer">Sakshi</p>
-                                <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+                                <a href="../../pages/player/player5.html"> <button class="visit">Visit</button></a></li>
                                 <div class="ratings">
                                     <i class="fa-solid fa-star"></i>
                                     <span class="ratingno" >4.5</span>
