--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -88,7 +88,7 @@
                 <div class="top">
                     <h2>Get Help From Web</h2>
                 </div>
-                <div class="main">
+                <div class="messagebox">
                     <img class="assistant"src="../../assets/images/assistant.png" alt="assitant">
                     <p class="messageto">Ask booking and joining related queries</p>
                 
