--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -11,22 +11,22 @@
 </head>
 
 <body>
+    <!-- signin container -->
     <div id="container">
-        <div class="forms">
-            <h1 class="sign">Sign in</h1>
-            <form>
-                <input type="email" placeholder="Email address " id="email" aria-label="email"><br>
-                <input type="password" placeholder="Password" id="password" aria-label="password"><br>
-                <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button"></a><br>
-                <a class="fp" href="#">Forget password</a><br>
-                <p class="newsign">New user</p><br>
-                <a href="../../pages/login/signup.html"><input type="button" value="Create New Account"
-                        id="newlogin" aria-label="button"></a><br>
-
-
-            </form>
-        </div>
-
+        <!-- signinform -->
+    <div class="forms">
+    <h1 class="sign">Sign in</h1>
+    <form>
+    <input type="email" placeholder="Email address " id="email" aria-label="email"><br>
+    <input type="password" placeholder="Password" id="password" aria-label="password"><br>
+    <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button"></a><br>
+    <a class="fp" href="#">Forget password</a><br>
+    <p class="newsign">New user</p><br>
+    <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin"        aria-label="button"></a><br>
+     </form>
+          <!-- signinform -->
+    </div>
+     <!-- signin container -->
 
 
     </div>
