--- a/pages/payment/paymentsuccesful.html
+++ b/pages/payment/paymentsuccesful.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div id="container">
+        <!-- container -->
         <div class="tick">
             <i class="fa-solid fa-check"></i><br>
             <h2 class="h0">Your Payment is Success</h2><br><br><br>
             <h2 class="h0"> Your code #98012</h2><br><br>
-            <p class="code">Please the show code in counter </p>
+            <p class="code">Please  show this code in counter </p>
           
             
         </div>
