--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -18,7 +18,7 @@
     <ul>
      <li><a href="../../index.html">Home</a> </li>
      <li><a href="../player/findplayers.html">Find Players</a></li>
-    <li><a href="#">Contact us</a></li>
+    <li><a href="../../pages/contactus/contact.html">Contact us</a></li>
     <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
     </ul>
     <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
