--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -61,7 +61,7 @@
     <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
     <div class="ratings">
     <i class="fa-solid fa-star"></i>
-    <span class="ratingno" >4.5</span>
+    <span class="ratingno" >5.0</span>
      </div>
     </div>
      </div>
@@ -74,7 +74,7 @@
        <a href="../../pages/player/player2.html"> <button class="visit">Visit</button></a></li>
       <div class="ratings">
     <i class="fa-solid fa-star"></i>
-    <span class="ratingno" >4.5</span>      
+    <span class="ratingno" >5.0</span>      
       </div>
      </div>
      </div>
@@ -87,7 +87,7 @@
      <a href="../../pages/player/player3.html"> <button class="visit">Visit</button></a></li>
      <div class="ratings">
      <i class="fa-solid fa-star"></i>
-    <span class="ratingno" >4.5</span> 
+    <span class="ratingno" >5.0</span> 
       </div>
       </div>
 </div>
@@ -100,7 +100,7 @@
      <a href="../../pages/player/player4.html"> <button class="visit">Visit</button></a></li>
      <div class="ratings">
       <i class="fa-solid fa-star"></i>
-      <span class="ratingno" >4.5</span> 
+      <span class="ratingno" >5.0</span> 
      </div>
      </div>
       </div>
@@ -113,7 +113,7 @@
 <a href="../../pages/player/player5.html"> <button class="visit">Visit</button></a></li>
  <div class="ratings">
  <i class="fa-solid fa-star"></i>
-<span class="ratingno" >4.5</span>
+<span class="ratingno" >5.0</span>
  </div>
        </div>
 </div>
@@ -122,11 +122,11 @@
 <div class="group">
  <br>
  <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
- <p class="nameplayer">blank </p>
- <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+ <p class="nameplayer">Amar </p>
+ <a href="../../pages/player/player6.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
   <i class="fa-solid fa-star"></i>
- <span class="ratingno" >4.5</span>
+ <span class="ratingno" >4.7</span>
  </div>
  </div>
 </div>
@@ -135,8 +135,8 @@
 <div class="group">
        <br>
        <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
-      <p class="nameplayer">Ramesh</p>
- <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+      <p class="nameplayer">Kaviya</p>
+ <a href="../../pages/player/player7.html"> <button class="visit">Visit</button></a></li>
  <div class="ratings">
   <i class="fa-solid fa-star"></i>
       <span class="ratingno" >4.5</span>   
@@ -148,8 +148,8 @@
 <div class="group">
  <br>
      <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
-      <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+<p class="nameplayer">Somu</p>
+      <a href="../../pages/player/player8.html"> <button class="visit">Visit</button></a></li>
        <div class="ratings">
 <i class="fa-solid fa-star"></i>
   <span class="ratingno" >4.5</span>  
@@ -161,8 +161,8 @@
 <div class="group">
  <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
-<a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+<p class="nameplayer">Vikram</p>
+<a href="../../pages/player/player9.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
     <span class="ratingno" >4.5</span>
@@ -175,8 +175,8 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
-<a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
+<p class="nameplayer">Dhruv</p>
+<a href="../../pages/player/player10.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
     <span class="ratingno" >4.5</span>
@@ -189,7 +189,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -203,7 +203,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -217,7 +217,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -231,7 +231,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -245,7 +245,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -259,7 +259,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -273,7 +273,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -287,7 +287,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -301,7 +301,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -315,7 +315,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -329,7 +329,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -343,7 +343,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -357,7 +357,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -371,7 +371,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -385,7 +385,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -399,7 +399,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -413,7 +413,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -427,7 +427,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -441,7 +441,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -455,7 +455,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -469,7 +469,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -483,7 +483,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -497,7 +497,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -511,7 +511,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -525,7 +525,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -539,7 +539,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -553,7 +553,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -567,7 +567,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -581,7 +581,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -595,7 +595,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -609,7 +609,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -623,7 +623,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -637,7 +637,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -651,7 +651,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -665,7 +665,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -679,7 +679,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -693,7 +693,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -707,7 +707,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -721,7 +721,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -735,7 +735,7 @@
 <div class="group">
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
-<p class="nameplayer">Ramesh</p>
+<p class="nameplayer">Blank</p>
 <a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
