--- a/pages/player/player8.html
+++ b/pages/player/player8.html
@@ -46,7 +46,7 @@
     <div class="profile1">
 <div class="box1">
     <img class="profilepic" src="../../assets/images/userlogo.png" alt="profilepicofplayer"><br>
-    <a href="#"> <button class="profile">Ramesh</button></a></li><br><br>
+    <a href="#"> <button class="profile">Somu</button></a></li><br><br>
     <div class="sports">
 <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
 <img class="cricketicon" src="../../assets/images/footballicon.png" alt="cricketicon">    
@@ -57,13 +57,13 @@
     <!-- ratings -->
     <div class="ratings">
 <i class="fa-solid fa-star"></i>
-    <span style="font-size:130%; font-weight: bold;">5.0</span>
+    <span style="font-size:130%; font-weight: bold;">4.5</span>
     
     </div>
      <a href="#"> <button class="connect">Connect</button></a></li><br><br>
      <!-- aboutplayer -->
      <div class="playerinfo">
-<p>Hi iam ramesh i played 6 matches .Iam good at cricket batting  feel free to connect me if you playing   </p>
+<p>Hi iam Somu i played 6 matches .Iam good at cricket batting  feel free to connect me if you playing   </p>
 
       
     </div>
