--- a/pages/payment/cashpay.html
+++ b/pages/payment/cashpay.html
@@ -14,7 +14,8 @@
      <div class="tick">
     <i class="fa-solid fa-check"></i><br>
     <h2 class="h0">Please show this code before paying cash in counter</h2><br><br><br>
-    <h2 class="h0"> Your code #98012</h2><br><br>     
+    <h2 class="h0"> Your code #98012</h2><br><br>   
+    <a href="../../index.html"> <button class="goback">Go back</button></a>  
      </div>
 
     </div>
