--- a/pages/player/joinplayer.html
+++ b/pages/player/joinplayer.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Join player</title>
+    <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <link rel="stylesheet" href="../../assets/css/joinplayer.css">
 </head>
 <body>
