--- a/pages/player/registeredplayer.html
+++ b/pages/player/registeredplayer.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Your Profile</title>
+    <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <link rel="stylesheet" href="../../assets/css/registeredplayer.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,12 +21,15 @@
      <li><a href="../../pages/contactus/contact.html">Contact us</a></li>     
     </ul>
 
-    <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
-
-    <h3 class="cont1">  Your Profile </h3>
   
     </header>
      <!-- header -->
+     <div class="heading">
+      
+    <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
+
+    <h3 class="cont1">  Your Profile </h3>
+     </div>
    
     <div class="maincontainer">
     <div class="bar">
