--- a/pages/player/joinplayer.html
+++ b/pages/player/joinplayer.html
@@ -32,8 +32,22 @@
         <option>Tennis</option>
                
         </select><br>
+        <p class="labelname">Location</p><br>
+        <select class="locationselect">
+            <option>Chennai</option>
+            <option>Coimbatore</option>
+            <option>Salem</option>
+            <option>Erode</option>
+            <option>Madurai</option>
+            <option>Delhi</option>
+            <option>Bangalore</option>
+            <option>Pune</option>
+            <option>Kolkata</option>
+
+    </select><br>
         <p class="labelname">Timing Available</p><br>
         <input type="time"  id="timingsfrom" aria-label="timingsfrom"><br>
+        
         <p>To</p><br>
         <input type="time"  id="timingsto" aria-label="timingsto">
         </div>
