--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -41,6 +41,20 @@
 <option>FOOTBALL</option>
        </select>
     </div>
+    <p class="selectslocationword">Search by location</p>
+    <img class="locationicon" src="../../assets/images/locationicon.gif" alt="locationicon">
+    <select class="locationselect">
+            <option>Chennai</option>
+            <option>Coimbatore</option>
+            <option>Salem</option>
+            <option>Erode</option>
+            <option>Madurai</option>
+            <option>Delhi</option>
+            <option>Bangalore</option>
+            <option>Pune</option>
+            <option>Kolkata</option>
+
+    </select>
 
      <div class="cont3">
        <br>
