--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -19,7 +19,7 @@
     <ul>
      <li><a href="../../index.html">Home</a> </li>
     <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
-    <li><a href="#">Contact us</a></li>
+    <li><a href="../../pages/contactus/contact.html">Contact us</a></li>
      </ul>
     <a href="../../index.html"> <img class="logo" src="../../assets/images/Logo.png"  alt="Book and play"></a>   
     </header>
