--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -123,7 +123,7 @@
     <div class="child">
      <div class="group">
        <br>
-      <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
+      <img class="userlogo" src="../../assets/images/userglogo.png" alt="userlogo">
        <p class="nameplayer">Sakshi</p>
 <a href="../../pages/player/player5.html"> <button class="visit">Visit</button></a></li>
  <div class="ratings">
