--- a/pages/player/player3.html
+++ b/pages/player/player3.html
@@ -46,7 +46,7 @@
 <div class="sidebar1">
     <div class="profile1">
 <div class="box1">
-    <img class="profilepic" src="../../assets/images/userlogo.png" alt="profilepicofplayer"><br>
+    <img class="profilepic" src="../../assets/images/userglogo.png" alt="profilepicofplayer"><br>
     <a href="#"> <button class="profile">Andrea</button></a></li><br><br>
     <div class="sports">
 <img class="cricketicon"src="../../assets/images/cricketicon.png" alt="cricketicon">
