--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 <!-- header -->
 <header>
-<input type="checkbox" id="check">
+<input type="checkbox" id="check"/>
 <label for="check" class="checkbtn">
   <i class="fa-solid fa-bars"></i></label>
-</input>
+
  <ul>
  <li><a href="#">Home</a> </li>
  <li><a href="./pages/bookinground/bookground.html">Book Grounds</a></li>
