--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -16,6 +16,9 @@
 
  <!-- header -->
      <header>
+ <input type="checkbox" id="check"/>
+   <label for="check" class="checkbtn">
+  <i class="fa-solid fa-bars"></i></label>
     <ul>
      <li><a href="../../index.html">Home</a> </li>
      <li><a href="../player/findplayers.html">Find Players</a></li>
@@ -25,7 +28,7 @@
     <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
     </header>
      <!-- header -->
-     =
+     
     <!-- main1 search-->
     <div class="main1">
     <h3 class="content1">Search Grounds Around you</h3>
