--- a/pages/bookinground/ground9.html
+++ b/pages/bookinground/ground9.html
@@ -14,7 +14,10 @@
 </head>
 <body>
       <!-- header -->
-    <header>            
+    <header> 
+        <input type="checkbox" id="check"/>
+        <label for="check" class="checkbtn">
+       <i class="fa-solid fa-bars"></i></label>           
             <ul>
 <li><a href="../../index.html">Home</a> </li>
 <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
