--- a/pages/player/findplayers.html
+++ b/pages/player/findplayers.html
@@ -259,7 +259,7 @@
 <br>
     <img class="userlogo" src="../../assets/images/userlogo.png" alt="userlogo">
 <p class="nameplayer">Blank</p>
-<a href="../../pages/player/playerprofile.html"> <button class="visit">Visit</button></a></li><div class="btn">
+<div class="btn">
     <a href="../../pages/player/player10.html"> <button class="visit">Visit</button></a></li>
     </div><div class="ratings">
     <i class="fa-solid fa-star"></i>
@@ -820,7 +820,7 @@
 <p class="nameplayer">Blank</p>
 <div class="btn">
     <a href="../../pages/player/player10.html"> <button class="visit">Visit</button></a></li>
-    </div>/li>
+    </div>
 <div class="ratings">
     <i class="fa-solid fa-star"></i>
     <span class="ratingno" >4.5</span>
