--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <li><a href="./pages/contactus/contact.html">Contact us</a></li>
  <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
 </ul>
-<a href="/index.html"><img class="logo" src="./assets/images/LOGO (2).png " alt="Book and play"></a>
+<a href="/index.html"><img class="logo" src="./assets/images/Logo.png " alt="Book and play"></a>
 
        
  </header>
