--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- main2 what we do -->
 
-    <div id="main2">
+    <div id="main2" class="main22">
     <div class="mainchild">
     <div class="box">
     <span class="box-heading1">Book Grounds</span>
