--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -17,12 +17,14 @@
     <div class="forms">
     <h1 class="sign">Sign in</h1>
     <form>
-    <input type="email" placeholder="Email address " id="email" aria-label="email"><br>
+    <input type="email" placeholder="Email address " id="email" aria-label="email" ><br>
     <input type="password" placeholder="Password" id="password" aria-label="password"><br>
-    <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button"></a><br>
+    <!-- <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button" ></a> -->
+    <button id="login" type="button" onclick="getData()">Login</button><br>
     <a class="fp" href="#">Forget password</a><br>
     <p class="newsign">New user</p><br>
-    <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin"        aria-label="button"></a><br>
+    <!-- <button id="newlogin" type="button" onclick="getData()">Create New Account</button><br> -->
+    <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin" aria-label="button"></a><br>
      </form>
           <!-- signinform -->
     </div>
@@ -30,6 +32,17 @@
 
 
     </div>
+    <script>
+   function getData(){
+        const email = (document.getElementById("email").value )
+        const password = (document.getElementById("password").value )
+        console.log(email)
+        console.log(password)
+        localStorage.setItem("userEmail",email)
+        localStorage.setItem("userpassword",password)
+        window.location.href="../../index.html"
+    }
+    </script>
 </body>
 
 </html>
